--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --env-file=.env index.js",
+    "dev": "node --watch --env-file=.env index.js",
     "test": "node test.js"
   },
   "keywords": [
