--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "express": "^4.21.0",
+    "pkg-dir": "^8.0.0",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
