--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "esbuild": "^0.24.0",
     "express": "^4.21.0",
     "pkg-dir": "^8.0.0",
     "showdown": "^2.1.0"
