--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "showdown": "^2.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.7.4"
+    "@types/node": "^22.7.4",
+    "eslint": "^9.12.0",
+    "globals": "^15.11.0"
   }
 }
